--- a/Mualliflar.html
+++ b/Mualliflar.html
@@ -56,6 +56,7 @@
                   <h3>21. Madanova Munisa</h3>
                   <h3>22. Abdujalilova Baxtigul</h3>
                   <h3>23. Xudoyqulova Adiba</h3>
+                    <h3>24. Lolayeva Ozoda</h3>
 
 
 
