--- a/arbain-test.html
+++ b/arbain-test.html
@@ -3,15 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Arbain Test</title>
+    <title>Testlar</title>
     <link rel="stylesheet" href="styless.css">
 </head>
 <body>
-
-        <!-- Header -->
+    <!-- Header -->
     <header>
         <h1>Testlar Bo'limi</h1>
     </header>
+
     <nav>
         <div class="nav-container">
             <a href="diniy.html">ortga qaytish</a>
@@ -20,8 +20,8 @@
 
     <div class="container">
         <div class="content">
-            <form class="arbainTest">
-                <h2>Arbain test</h2>
+            <h2>Arba'in Test</h2>
+            <form id="arbainTest">
                 <div class="question">
                     <p>1. Kim Navoiyni "dinning nizomi– qonuni" deb ulugʻlagan?</p>
                     <label><input type="radio" name="q1" value="A"> a) Davlatshoh Samarqandiy</label><br>
@@ -101,7 +101,6 @@
                     <label><input type="radio" name="q10" value="C"> c) Qarz bu din uzra dog'dir. </label><br>
                     <label><input type="radio" name="q10" value="D"> d) Va'da bu qarzdir.</label>
                 </div>
-
                 <div class="question">
                     <p>11. Mo'min ersang qilib durringni nisor, El bila ravshan o'l nechukkim sham. Negakim , tengri hech mo'minda, Buxlu badhoyluqni qilmadi jam. Ushbu parchaning maʼnosini izohlang?</p>
                     <label><input type="radio" name="q11" value="A"> a) Mo'min kishida ikki xislat jam bo'lmaydi. Baxillik va yomon xulqlilik .</label><br>
@@ -140,7 +139,6 @@
                     <label><input type="radio" name="q15" value="C"> c) Odamlarga rahmli bilmagan kishiga ollohning ham rahmi kelmaydi.</label><br>
                     <label><input type="radio" name="q15" value="D"> d) Kimki insonlarga shukur qilmasa ollohga ham shukr qilmaydi.</label>
                 </div>
-
                 <div class="question">
                     <p>16. Rahmat ozodagʻaki ul olmos, Daxr dinoru dirxamin gʻamgʻa. Lek lanat angaki qul boʻlg'ay. Xoh dinoru, xoh dirhamga. Ushbu parchada qanday g'oya ilgari surilgan?</p>
                     <label><input type="radio" name="q16" value="A"> a) Dinur va dirhamga qul boʻlganlarga lanat boʻlsin.</label><br>
@@ -180,7 +178,6 @@
                     <label><input type="radio" name="q20" value="C"> c) Jannat onalar oyogʻi ostida.</label><br>
                     <label><input type="radio" name="q20" value="D"> d) Yaxshi soʻz-sadaqadir.</label>
                 </div>
-
                 <div class="question">
                     <p>21. Eyki, bir nesh etti muzyidin Koʻnglingga pecha uzaysa, yotgan. Chunki moʻminni tishlamas hargiz Bir toʻshukdin yilon ikki qatla. Ushbu turklik nima haqida?</p>
                     <label><input type="radio" name="q21" value="A"> a) To'kinlik qilish odamlarga zarar keltiradi.</label><br>
@@ -219,7 +216,6 @@
                     <label><input type="radio" name="q25" value="C"> c) Ilmda baxillik yo'q.</label><br>
                     <label><input type="radio" name="q25" value="D"> d) Vada bu qarzdur.</label><br>
                 </div>
-
                 <div class="question">
                     <p>26. Ahli din ul dururki qilgʻay ado, Bot agar zimmasinda dayn oʻlg'ay. Dayn adosi chu din alomatidur, Beadoliq dingʻa shayn oʻlgʻay. Ushbu to'rtlik nima haqida?</p>
                     <label><input type="radio" name="q26" value="A"> a) Qarz- bu din uzra dog'dir.</label><br>
@@ -259,9 +255,8 @@
                     <label><input type="radio" name="q30" value="C"> c) Maslahatchi ishonchga sazovordir.</label><br>
                     <label><input type="radio" name="q30" value="D"> d) Goh gohida ko'rishganda muhabbat oshar.</label><br>
                 </div>
-
                 <div class="question">
-                    <p>31. Bu yozuq bas kishigakim , eldin Har na soʻzkim eshitti fosh etti. Togʻ eshitganini der, gunohidin Goʻyo tengri oni tosh etti. Ushbu parchada qanday maʼno bor?</p>
+                    <p>31.  yozuq bas kishigakim , eldin Har na soʻzkim eshitti fosh etti. Togʻ eshitganini der, gunohidin Goʻyo tengri oni tosh etti. Ushbu parchada qanday maʼno bor?</p>
                     <label><input type="radio" name="q31" value="A"> a) Eshitgan gaplarini oʻzgalarga aytish insonning gunohga botishi uchun kifoyadir.</label><br>
                     <label><input type="radio" name="q31" value="B"> b) Majlislarda eshitganing omonatdir.</label><br>
                     <label><input type="radio" name="q31" value="C"> c) Va'da bu qarzdir.</label><br>
@@ -330,7 +325,6 @@
                     <label><input type="radio" name="q39" value="C"> c) Tilingni avaylab omondur boshing.</label><br>
                     <label><input type="radio" name="q39" value="D"> d) Noumid inson boy bo'lmaydi.</label><br>
                 </div>
-
                 <div class="question">
                     <p>40. Kimki islom koʻzgusida tilar Har zamon oʻzga bir safo mavjud, Kechsun ul nav borcha ishdin kim, Tengri rozi emas, ulus- xushnud. Mazkur parchada qanday maʼno bor?</p>
                     <label><input type="radio" name="q40" value="A"> a) O'ziga yarashmagan narsalarni tark etish- inson musulmonligining husnidir.</label><br>
@@ -380,9 +374,9 @@
                 </div>
                 <div class="question">
                     <p>45. Yaxshi soʻz birla hojat ahlin soʻr, <br>
-                    Bermasang yaxshi toʼmadin nafaqa. <br>
-                    Pe uchunkim rasul qavli bilan <br>
-                    Yaxshi soʻz bordur oʻylakim sadaqa.</p>
+                        Bermasang yaxshi toʼmadin nafaqa. <br>
+                        Pe uchunkim rasul qavli bilan <br>
+                        Yaxshi soʻz bordur oʻylakim sadaqa.</p>
                     <label><input type="radio" name="q45" value="A"> a) yaxshi soʻz -sadaqadir</label><br>
                     <label><input type="radio" name="q45" value="B"> b) Yaxshi soʻzlang.</label><br>
                     <label><input type="radio" name="q45" value="C"> c) Hayotda doim yaxshilik qiling.</label><br>
@@ -436,6 +430,7 @@
                     <label><input type="radio" name="q50" value="C"> c) Gohi koʻrishganda muhabbat oshar.</label><br>
                     <label><input type="radio" name="q50" value="D"> d) Ilmda baxillik yo'q.</label><br>
                 </div>
+
 
                 <button type="button" id="submitBtn">Natijani Ko'rish</button>
                 <button type="button" id="resetBtn">Testni qayta boshlash</button>
