--- a/diniy.html
+++ b/diniy.html
@@ -29,7 +29,7 @@
                     <ul>
                         <li><a href="siroj-matn.html">Asar matni</a></li>
                         <li><a href="siroj-lugat.html">Asar lug'ati</a></li>
-                        <li><a href="#">Asar testi</a></li>
+                        <li><a href="siroj-test.html">Asar testi</a></li>
                     </ul>
                 </article>
                 <article>
@@ -51,7 +51,7 @@
                 <article>
                     <h3>4. Nasoyim ul-muhabbat</h3>
                     <ul>
-                        <li><a href="#">Asar matni</a></li>
+                        <li><a href="https://drive.google.com/file/d/1mzg4GAsI02_ivuiECKOt7LUl6Ahe0HzD/view?usp=sharing" target="_blank">Asar matni</a></li>
                         <li><a href="nasoyim-lugat.html">Asar lug'ati</a></li>
                         <li><a href="#">Asar testi</a></li>
                     </ul>
