--- a/holati-sayid-ardasher.html
+++ b/holati-sayid-ardasher.html
@@ -3,25 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>“Holoti Sayyid Hasan Ardasher” asaridan testlar</title>
+    <title>Holoti-Sayyid-Hasan-Ardasher</title>
     <link rel="stylesheet" href="styless.css">
 </head>
 <body>
-    <h1>Holoti Sayyid Hasan Ardasher Asaridan Test</h1>
 
-        <!-- Header -->
+    <!-- Header -->
     <header>
         <h1>Testlar Bo'limi</h1>
     </header>
-        <nav>
-            <div class="nav-container">
-                <a href="yodnomalar.html">ortga qaytish</a>
-            </div>
-        </nav>
+
+    <nav>
+        <div class="nav-container">
+            <a href="yodnomalar.html">ortga qaytish</a>
+        </div>
+    </nav>
+
 
 
         <div class="container">
             <div class="content">
+                <h2>"Holoti Sayyid Hasan Ardasher" Asari Haqida Test</h2>
                 <form id="ardasherTest">
                     <div class="question">
                         <p>1. "Holoti Sayyid Hasan Ardasher" asari qachon yaratilgan?</p>
