--- a/marifiy.html
+++ b/marifiy.html
@@ -27,17 +27,17 @@
                 <article>
                     <h3>1. Mahbub ul-qulub</h3>
                     <ul>
-                        <li><a href="#">Asar matni</a></li>
+                        <li><a href="https://drive.google.com/file/d/1n9lUMEiANhzSjZdOydIbFcOQH7n3hCQw/view?usp=sharing" target="_blank">Asar matni</a></li>
                         <li><a href="#">Asar lug'ati</a></li>
-                        <li><a href="#">Asar testi</a></li>
+                        <li><a href="mahbub-ul-qulub-test.html">Asar testi</a></li>
                     </ul>
                 </article>
                 <article>
                     <h3>2. Nazm ul-javohir</h3>
                     <ul>
-                        <li><a href="#">Asar matni</a></li>
-                        <li><a href="#">Asar lug'ati</a></li>
-                        <li><a href="#">Asar testi</a></li>
+                        <li><a href="https://drive.google.com/file/d/14UPvURLJstfkKSqVPyaIyf9f612uvo4x/view?usp=sharing" target="_blank">Asar matni</a></li>
+                        <li><a href="nazm-ul-javohir-lugat.html">Asar lug'ati</a></li>
+                        <li><a href="nazm-ul-javohir-test.html">Asar testi</a></li>
                     </ul>
                 </article>
             </section>
