--- a/siroj-matn.html
+++ b/siroj-matn.html
@@ -147,7 +147,7 @@
           <p>Ю(в)моғлиқ юзни манглай то зақандур,  Қулоқдин то қулоқ важҳи ҳасандур.</p>
           <p>Маҳосин бўлса ончаким, ёпар юз,  Ани ғусл айламак, эй ниятинг туз.</p>
           <p>Ики қўлни ики тирсак била ю(в),  Вузу айларда билким, фарз эрур бу.</p>
-          <p>Яна бош масҳини ҳам фарз билғил,  Валекин, тўрт улуштин бирни қилғил.</p
+          <p>Яна бош масҳини ҳам фарз билғил,  Валекин, тўрт улуштин бирни қилғил.</p>
           <p>Ю(в)моғ ики оёғини фарз эрур ҳам,  Ики ошуғини ҳам қилмоқ анга зам.</p>
           <h3>ТАҲОРАТ СУННАТЛАРИНИНГ ШАРҲИ</h3>
           <p>Вузуъда ўн ики иш келди суннат,  Бирисин тасмия  бил, бирни ният.</p>
@@ -280,15 +280,6 @@
           <p>Чу равшан айлар ислом аҳли зотин:  «Сирож ул-муслимин» қўймишмен отин.</p>
           <p>Умидим улки, ҳарким ўқуғай,  Мунунг нури била кўнгли ёруғай.</p>
           <p>Дуо бирла мени ҳам айлагай ёд,  Равоним ул дуодин айлагай шод.</p>
-
-
-
-
-
-
-
-
-
 
         </div>
     </div>
