--- a/yodnomalar.html
+++ b/yodnomalar.html
@@ -27,15 +27,15 @@
             <article>
                 <h3>1. Holoti Sayid Hasan Ardasher</h3>
                 <ul>
-                    <li><a href="#">Asar matni</a></li>
-                    <li><a href="#">Asar lug'ati</a></li>
+                    <li><a href="holati-sayid-matn.html">Asar matni</a></li>
+                    <li><a href="holati-sayid-lugat.html">Asar lug'ati</a></li>
                     <li><a href="holati-sayid-ardasher.html">Asar testi</a></li>
                 </ul>
             </article>
             <article>
                 <h3>2. Holoti Pahlavon Mahmud</h3>
                 <ul>
-                    <li><a href="#">Asar matni</a></li>
+                    <li><a href="holati-pahlavon-matn.html">Asar matni</a></li>
                     <li><a href="#">Asar lug'ati</a></li>
                     <li><a href="holati-pahlavon-mahmud.html">Asar testi</a></li>
                 </ul>
